Navbar z-index fix

--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -69,6 +69,7 @@ app-nav {
   margin: 0%;
   display: flex;
   justify-content: center;
+  z-index: 3;
 }
 
 .logoContainer {
